# config-a2a

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
.agent_docs/: a2a-protocol.md  identity.md  juicefs.md  mcp.md  memory.md  observability.md  patterns.md  persistence.md  providers.md  yaml-schema.md
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_memory.py  0003_multi_agent.py  0004_task_artifacts.py
config_examples/01-simple/: agent.yaml  server.yaml
config_examples/01-simple/prompts/: system.md
config_examples/02-react/: agent.yaml  agents.yaml
config_examples/02-react/prompts/: react.md  system.md
config_examples/03-plan-execute/: agent.yaml  agents.yaml
config_examples/03-plan-execute/prompts/: executor.md  planner.md  system.md
config_examples/04-handoff/: agents.yaml  chat.yaml  math.yaml  router.yaml
config_examples/04-handoff/prompts/: router.md
config_examples/05-orchestrate/: agent.yaml  agents.yaml
config_examples/05-orchestrate/prompts/: aggregator.md
config_examples/06-debate/: agent.yaml  agents.yaml
config_examples/06-debate/prompts/: against.md  judge.md  pro.md
config_examples/07-tree-of-thoughts/: agent.yaml  agents.yaml
config_examples/07-tree-of-thoughts/prompts/: evaluator.md  generator.md
config_examples/08-coding-agent/: README.md  agents.yaml  coding-agent.yaml  server.yaml
config_examples/08-coding-agent/phases/: 01-classification.yaml  02-dor.yaml  03-comprehension.yaml  04-planning.yaml  05-e2e-writing.yaml  06-implementation.yaml  07-review.yaml  08-pr-creation.yaml
config_examples/08-coding-agent/prompts/: 01-classification.md  02-dor.md  03-comprehension.md  04-planning.md  05-e2e-writing.md  06-implementation.md  07-review.md  08-pr-creation.md  orchestrator.md
config_examples/08-memory/: agent.yaml  agents.yaml
config_examples/08-memory/prompts/: system.md
config_examples/09-juicefs/: agents-jwt.yaml  agents.yaml
config_examples/09-juicefs/prompts/: system.md
config_examples/mcp-fs-moto/: agents.template.yaml  agents.yaml
config_examples/mcp-fs-moto/prompts/: system.md
examples/: agent.yaml
scenarios/: README.md  client.py  run_scenarios.py
specs/: BACKLOG.md  juicefs-integration.md
src/config_a2a/: __init__.py  api.py  cli.py  identity.py  loader.py  models.py  runtime.py  server.py  settings.py
src/config_a2a/a2a/: card.py  client.py  envelope.py  routes.py  sse.py
src/config_a2a/config/: __init__.py  juicefs.py  loader.py  models.py  prompts.py
src/config_a2a/guardrails/: anti_loop.py  confirmations.py
src/config_a2a/juicefs/: __init__.py  binding.py
src/config_a2a/mcp/: client.py  sse.py  stdio.py  streamable_http.py  tool_format.py
src/config_a2a/memory/: __init__.py  extractor.py  in_memory_store.py  sqlite_store.py  store.py  working.py
src/config_a2a/observability/: jsonl_exporter.py  otel.py
src/config_a2a/patterns/: __init__.py  base.py  confirm.py  debate.py  handoff.py  orchestrate.py  plan_execute.py  react.py  simple.py  tree_of_thoughts.py
src/config_a2a/persistence/: __init__.py  engine.py  models.py  repository.py  store.py
src/config_a2a/providers/: anthropic.py  base.py  google.py  openai_compat.py  registry.py  vertex.py
state/: simple-assistant.db
tests/: test_api.py  test_loader.py
tests/e2e/: test_examples_smoke.py  test_memory_recall.py
tests/fixtures/: fake_mcp_server.py
tests/unit/: conftest.py  test_a2a_client.py  test_a2a_surface.py  test_admin.py  test_config.py  test_identity_jwt.py  test_juicefs.py  test_loader_multi.py  test_mcp.py  test_memory.py  test_observability_auth.py  test_pattern_react_confirm.py  test_pattern_simple.py  test_pattern_simple_tools.py  test_patterns_debate_tot.py  test_patterns_handoff_orchestrate.py  test_patterns_react_plan.py  test_persistence.py  test_provider_openai_compat.py  test_providers_other.py  test_tool_name_sanitization.py
