[project]
name = "config-a2a"
version = "0.1.0"
description = "Create advanced A2A agents using YAML configuration files"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Sebastien MORAND", email = "seb.morand@gmail.com" },
]
keywords = ["a2a", "agent", "fastapi", "yaml", "configuration"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "aiohttp>=3.10.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "pylint>=3.3.0",
    "bandit>=1.7.10",
    "safety>=3.2.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "mypy>=1.13.0",
    "types-pyyaml>=6.0.12",
]

[project.scripts]
config-a2a = "config_a2a.cli:main"

[project.urls]
Homepage = "https://github.com/smorand/config-a2a"
Repository = "https://github.com/smorand/config-a2a"
Issues = "https://github.com/smorand/config-a2a/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/config_a2a"]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.pylint.main]
py-version = "3.13"
max-line-length = 120

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --cov=src/config_a2a --cov-report=term-missing"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true

[tool.bandit]
exclude_dirs = ["tests"]
